--- a/gestion-tutorat-front/src/app/components/tuteur-read/tuteur-read.component.html
+++ b/gestion-tutorat-front/src/app/components/tuteur-read/tuteur-read.component.html
@@ -37,15 +37,15 @@
         <span class="label">Statut :</span>
         <span class="value">{{ tuteur?.statut }}</span>
       </div>
-      <div class="action-buttons mt-4">
-  <a [routerLink]="['/tuteurs/edit', tuteur.id]" class="btn edit-btn">
-    <i class="bi bi-pencil-square"></i> Éditer
-  </a>
+      <div class="action-buttons mt-4" *ngIf="!modeLectureSeul">
+        <a [routerLink]="['/tuteurs/edit', tuteur.id]" class="btn edit-btn">
+          <i class="bi bi-pencil-square"></i> Éditer
+        </a>
 
-  <button class="btn delete-btn" (click)="onDeleteTuteur()" *ngIf="!modeLectureSeul">
-    <i class="bi bi-trash-fill"></i> Supprimer
-  </button>
-</div>
+        <button class="btn delete-btn" (click)="onDeleteTuteur()">
+          <i class="bi bi-trash-fill"></i> Supprimer
+        </button>
+      </div>
 
       
     </div>
