--- a/gestion-tutorat-front/src/app/components/user-profile/user-profile.component.html
+++ b/gestion-tutorat-front/src/app/components/user-profile/user-profile.component.html
@@ -1,16 +1,16 @@
 <div class="profile-page">
   <div class="profile-card">
-    <!-- En-tête -->
     <div class="card-header">
       <div class="avatar">{{ user?.name?.charAt(0)?.toUpperCase() }}</div>
 
-          <!-- Bouton de déconnexion -->
-    <div class="text-center mt-4">
-      <button class="btn btn-purple" (click)="logout()">
-        {{ 'NAV.DECONNEXION' | translate }}
+      <!-- Icône de déconnexion avec Angular Material -->
+      <button mat-icon-button class="logout-icon" (click)="logout()" aria-label="Déconnexion" title="{{ 'NAV.DECONNEXION' | translate }}">
+        <mat-icon>logout</mat-icon>
       </button>
+
     </div>
-    </div>
+
+
 
     <!-- Détails -->
     <div class="card-body">
@@ -33,7 +33,7 @@
       
       <!-- Bouton pour accéder à la liste des étudiants tutorés (visible uniquement pour les profs) -->
       <div *ngIf="user?.role === 'prof'" class="text-center mt-4">
-        <button class="btn" (click)="goToTutees()">
+        <button class="btn view-etudiants" (click)="goToTutees()">
           {{ 'PROFILE.VIEW_TUTORED_STUDENTS' | translate }}
         </button>
       </div>
