--- a/gestion-tutorat-front/src/app/components/affiche-etudiants/affiche-etudiants.component.html
+++ b/gestion-tutorat-front/src/app/components/affiche-etudiants/affiche-etudiants.component.html
@@ -243,7 +243,7 @@
         <th mat-header-cell *matHeaderCellDef class="stickyHeader">{{ 'STUDENTS.TUTOR' | translate }}</th>
         <td mat-cell *matCellDef="let element">
           <ng-container *ngIf="element.tuteur; else notAssigned">
-            {{ element.tuteur.nom }} {{ element.tuteur.prenom }}
+            <a href="/tuteurs/{{ element.tuteur.id }}">{{ element.tuteur.nom }} {{ element.tuteur.prenom }}</a>
           </ng-container>
           <ng-template #notAssigned>
             <span class="text-muted">{{ 'STUDENTS.NOT_ASSIGNED' | translate }}</span>
