--- a/gestion-tutorat-front/src/app/components/import/import.component.css
+++ b/gestion-tutorat-front/src/app/components/import/import.component.css
@@ -16,7 +16,7 @@
 
 /* En-tête de la carte */
 .card-header {
-  background: linear-gradient(90deg, #5dbfd1 0%, #9282d3 100%);
+  background: linear-gradient(90deg, #07b5d9 0%, #7b5fc9 100%);
   padding: 1.2rem 2rem;
   text-align: center;
 }
