--- a/gestion-tutorat-front/src/app/components/home/home.component.html
+++ b/gestion-tutorat-front/src/app/components/home/home.component.html
@@ -74,7 +74,7 @@
         <!-- Carte Affectation Manuelle -->
         <div class="feature-card">
           <div class="feature-icon">
-            <i class="fas fa-tasks"></i>
+            <i class="fas fa-cogs"></i>
           </div>
           <h3>{{ 'NAV.AFFECT_MANUELLE' | translate }}</h3>
           <p>{{ 'HOME.MANUAL_ASSIGN_DESC' | translate }}</p>
