--- a/gestion-tutorat-front/src/app/components/auto-affectation/auto-affectation.component.html
+++ b/gestion-tutorat-front/src/app/components/auto-affectation/auto-affectation.component.html
@@ -13,7 +13,7 @@
   </div>
 
   <div class="d-flex align-items-center mb-3 justify-content-center">
-    <button class="btn btn-outline-danger btn-sm me-2" (click)="resetAffectation()">
+    <button class="btn btn-primary btn-sm me-2" (click)="resetAffectation()">
       <i class="bi bi-x-circle"></i> {{ 'AUTO_AFFECT.RESET' | translate }}
     </button>
     <button class="btn btn-primary btn-sm" (click)="loadAffectation()">
