--- a/gestion-tutorat-front/src/app/app.component.html
+++ b/gestion-tutorat-front/src/app/app.component.html
@@ -21,7 +21,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
 
-        <li class="nav-item" *ngIf="isAuthenticated">
+        <li class="nav-item" *ngIf="isAuthenticated && role !== 'prof'">
           <a routerLink="/profil" routerLinkActive="active" class="nav-link">{{ 'NAV.PROFILE' | translate }}</a>
         </li>
 
@@ -73,10 +73,7 @@
           <a routerLink="/reporting" routerLinkActive="active" class="nav-link">{{ 'NAV.REPORTING' | translate }}</a>
         </li>
 
-        <!-- VOIR ETUDIANTS -->
-        <li class="nav-item" *ngIf="isAuthenticated && role === 'prof'">
-          <a routerLink="/tuteur-dashboard" routerLinkActive="active" class="nav-link">{{ 'NAV.DASHBOARD' | translate }}</a>
-        </li>
+  
 
         <!-- Ajouter Dropdown -->
         <li class="nav-item dropdown" *ngIf="role === 'admin'">
