--- a/gestion-tutorat-front/src/app/components/user-profile/user-profile.component.css
+++ b/gestion-tutorat-front/src/app/components/user-profile/user-profile.component.css
@@ -6,12 +6,8 @@
   padding: 20px;
   padding-top: 160px; 
   box-sizing: border-box;
-  background: linear-gradient(
-    135deg,
-    #002b45 0%,
-    #005c7c 50%,
-    #cb66df 100%
-  );
+  background: linear-gradient(135deg, #00abc7, #9b59b6);
+
 }
 
 /* 2) Carte de profil */
