--- a/gestion-tutorat-front/src/app/components/home/home.component.css
+++ b/gestion-tutorat-front/src/app/components/home/home.component.css
@@ -163,7 +163,7 @@
 }
 
 .login-card h2 {
-  color: #005073;
+  color: #00abc7;
   font-size: 1.8rem;
   margin-bottom: 1rem;
 }
@@ -175,7 +175,7 @@
 }
 
 .btn-primary {
-  background: linear-gradient(135deg, #005073 0%, #1cb5e0 100%);
+  background: linear-gradient(135deg, #00abc7, #9b59b6);
   border: none;
   padding: 0.8rem 2rem;
   font-size: 1.1rem;
